include $(top_srcdir)/globus_automake_pre
include $(top_srcdir)/globus_automake_pre_top


# SUBDIRS is an automake macro which contains 
# the list of subdirectories that have Makefile.am's
SUBDIRS= \
	doxygen \
	pkgdata 

EXTRA_DIST = architecture.dot states.dot \
	     changes.dox main.dox overview.dox

include $(top_srcdir)/globus_automake_post
include $(top_srcdir)/globus_automake_post_top

