dnl

AC_REVISION($Revision$)
AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl config header goes here

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

GLOBUS_FINALIZE

AC_OUTPUT(
	Makefile
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
        rsl_size_test/Makefile
        rsl_size_test/globus-gram-job-manager-rsl-size-test.pl
	stdio_test/Makefile
        stdio_test/globus-gram-job-manager-stdio-test.pl
        submit_test/Makefile
        submit_test/globus-gram-job-manager-submit-test.pl
        failure_test/Makefile
        failure_test/globus-gram-job-manager-failure-test.pl
        user_test/Makefile
        user_test/globus-gram-job-manager-user-test.pl
        job-manager-script-test.pl
        TESTS.pl

)
