dnl

AC_REVISION($Revision$)
AC_INIT(Makefile.am)
AC_CONFIG_AUX_DIR([build-aux])

GLOBUS_INIT

AM_PROG_LIBTOOL

dnl config header goes here

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)


dnl Don't create a pkg-config file for program-only packages
pkgconffile=""

LAC_DOXYGEN([" ../ "])

xml_catalog_path="notset"
AC_ARG_WITH(
    xml-catalog,
    [  --with-xml-catalog=PATH       Path to XML catalog],
    [xml_catalog_path="$withval"],
    [xml_catalog_path="notset"])

AC_PATH_PROG(XSLTPROC, "xsltproc")
AC_PATH_PROG(XMLLINT, "xmllint")

if test "x$xml_catalog_path" != x"notset"; then
    if test ! -f "$xml_catalog_path"; then
        AC_MSG_ERROR([Invalid XML catalog path])
    else
        XML_CATALOG_PATH=$xml_catalog_path
        AC_SUBST(XML_CATALOG_PATH)
    fi
fi

AM_CONDITIONAL([GENERATE_MANPAGES], [test "$xml_catalog_path" != "notset"])

GLOBUS_FINALIZE

AC_OUTPUT(
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
        Makefile
	doxygen/Makefile
	doxygen/Doxyfile
	doxygen/Doxyfile-internal
	version.h
        globus-job-cancel:globus-job-clean.in
        globus-job-clean:globus-job-clean.in
        globus-job-submit:globus-job-run.in
        globus-job-run:globus-job-run.in
        globus-job-status:globus-job-status.in
        globus-job-get-output:globus-job-get-output.in
)
