dnl

AC_INIT(Makefile.am)

GLOBUS_INIT

AM_PROG_LIBTOOL

AC_CONFIG_AUX_DIR(.)

dnl Initialize the automake rules the last argument
AM_INIT_AUTOMAKE($GPT_NAME, $GPT_VERSION)

AC_MSG_CHECKING([if compiler supports -Wno-unused])
echo "int main(void) { return 0; }" > conftest.c
if test "X`$CC -Wno-unused -c conftest.c 2>&1`" = "X" ; then
    AC_MSG_RESULT(yes)
    CFLAGS="$CFLAGS -Wno-unused"
else
    AC_MSG_RESULT(no)
fi

LAC_DOXYGEN("../ ./", "*.dox")

GLOBUS_INSTALLDIR=$GLOBUS_LOCATION
AC_SUBST(GLOBUS_INSTALLDIR)

CFLAGS="$CFLAGS -DGLOBUS_BUILTIN"
    
GLOBUS_FINALIZE

PACKAGENAME="gridftp_admin_service"
AC_SUBST(PACKAGENAME)

INCLUDEPATH=""
AC_SUBST(INCLUDEPATH)

OUTPUTHEADERS="byte_transfer_count.h max_bw.h backends_registered.h current_bw.h GridFTPAdminPortTypeGTWSDLResourceProperties.h GridFTPAdminPortTypeGTWSDLResourcePropertiesType.h GridFTPAdminPortTypeGTWSDLResourcePropertiesType_array.h approximate_load.h banner.h connections_max.h open_connections_count.h FrontendStats.h FrontendStatsType.h FrontendStatsType_array.h contact_string.h data_connection_max.h file_transfer_count.h GridFTPAdminService.h GridFTPAdminService_skeleton.h GridFTPAdminService_internal_skeleton.h "
AC_SUBST(OUTPUTHEADERS)

OUTPUTTYPES="byte_transfer_count.c max_bw.c backends_registered.c current_bw.c GridFTPAdminPortTypeGTWSDLResourceProperties.c GridFTPAdminPortTypeGTWSDLResourcePropertiesType.c approximate_load.c banner.c connections_max.c open_connections_count.c FrontendStats.c FrontendStatsType.c contact_string.c data_connection_max.c file_transfer_count.c GridFTPAdminService_type_registry.c "
AC_SUBST(OUTPUTTYPES)

OUTPUTCLIENT=""
AC_SUBST(OUTPUTCLIENT)

OUTPUTTYPESOBJECTS="byte_transfer_count.lo max_bw.lo backends_registered.lo current_bw.lo GridFTPAdminPortTypeGTWSDLResourceProperties.lo GridFTPAdminPortTypeGTWSDLResourcePropertiesType.lo approximate_load.lo banner.lo connections_max.lo open_connections_count.lo FrontendStats.lo FrontendStatsType.lo contact_string.lo data_connection_max.lo file_transfer_count.lo GridFTPAdminService_type_registry.lo "
AC_SUBST(OUTPUTTYPESOBJECTS)

OUTPUTCLIENTOBJECTS=""
AC_SUBST(OUTPUTCLIENTOBJECTS)

AC_OUTPUT(
	Makefile
	pkgdata/Makefile
	pkgdata/pkg_data_src.gpt
        doxygen/Makefile
        doxygen/Doxyfile
        doxygen/Doxyfile-internal
       GridFTPAdminService/Makefile

)
